# tcs

./: Cargo.toml  LICENSE  README.md
bench/: Cargo.toml
bench/benches/: serialization.rs
bench/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
compiler/: Cargo.toml
compiler/src/: error.rs  formatter.rs  gen_rust.rs  lib.rs  parser.rs  tokenizer.rs  utils.rs  verifier.rs
example/: Cargo.toml  Makefile  README.md  tapedrive.tcs
example/src/: generated.rs  main.rs
tcs-cli/src/: main.rs
tcs-compiler/src/: lib.rs
tcs-schema/: Cargo.toml
tcs-schema/src/: lib.rs  types.rs
